# whispyr

./: .gitignore  app.py  manage.py  pyproject.toml
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_secretmessage_slug.py
templates/: base.html
templates/includes/: footer.html  nav.html
templates/main/: about.html  home.html
whispyr/: __init__.py  asgi.py  config.py  models.py  settings.py  urls.py  wsgi.py
whispyr/main/: routes.py
whispyr/templates/: layout.html
whispyr/templates/includes/: nav.html
whispyr/templates/main/: about.html  main.html
