[tool.poetry]
name = "whispyr"
version = "0.1.0"
description = ""
authors = ["Hardeep Kumar <hardeepkumar1815@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
Flask = "^2.0.2"
yapf = "^0.31.0"
python-dotenv = "^0.19.2"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
