[tool.poetry]
name = "whispyr"
version = "0.1.0"
description = ""
authors = ["Hardeep Kumar <hardeepkumar1815@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
yapf = "^0.32.0"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
